# Course_5_Coursework_Work_with_BD

./: .gitignore  README.md  main.py  pyproject.toml
src/api_integration/: class_parser.py
src/management_bd/: class_bd_manager.py
src/tests/: test_class_parser.py  test_work_with_data.py
src/work_with_files/: work_with_data.py
tests/: test_class_bd_manager.py
